Update drupal console to 1.0.0-beta2 version.

--- a/1.0/php5/Dockerfile
+++ b/1.0/php5/Dockerfile
@@ -3,7 +3,7 @@ FROM drupalconsole/console:base-php5
 MAINTAINER William Hearn <sylus1984@gmail.com>
 
 # Set the Drupal Console version.
-ENV DRUPAL_CONSOLE_VERSION 1.0.0-alpha2
+ENV DRUPAL_CONSOLE_VERSION 1.0.0-beta2
 
 # Install Drupal Console using Composer.
 RUN composer global require drupal/console:"$DRUPAL_CONSOLE_VERSION" --prefer-dist
